--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   
   <meta name="theme-color" content="#2f4154">
-  <meta name="description" content="淡淡的说非的个人博客">
+  <meta name="description" content="测试的个人博客">
   <meta name="author" content="yaorongke">
   <meta name="keywords" content="">
   
-  <title>淡淡的说非</title>
+  <title>测试演示</title>
 
   <link  rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" />
 
